modified:   README.md 	new file:   data/icons/app-icon.png 	modified:   run.bat 	new file:   run.sh 	modified:   src/Application.class 	modified:   src/models/Session.class 	modified:   src/models/User$UserRole.class 	modified:   src/models/User.class 	modified:   src/models/Vehicle.class 	modified:   src/persistence/FileUserRepository.class 	modified:   src/persistence/FileVehicleRepository.class 	modified:   src/services/AuthenticationService.class 	modified:   src/services/FilterService$FilterCriteria.class 	modified:   src/services/FilterService$InspectionStatus.class 	modified:   src/services/FilterService.class 	modified:   src/services/FilterService.java 	modified:   src/services/VehicleService.class 	modified:   src/ui/MainApp.class 	modified:   src/ui/MainApp.java 	modified:   src/util/EncryptionUtil.class 	modified:   src/util/JsonBuilder.class 	modified:   src/util/ValidationUtil.class